--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -24,6 +24,11 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
+
+<script src="/assets/js/raphael-min.js"><
+<script src="/assets/js/flowchart-latest.js"></script>
+
+
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
