--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -26,7 +26,7 @@
 
 
 <script src="/assets/js/raphael-min.js"><
-<script src="/assets/js/flowchart-latest.js"></script>
+<script src="/assets/js/flowchart.js"></script>
 
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
