--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -25,8 +25,8 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
 
-<script src="/assets/js/raphael-min.js"><
-<script src="/assets/js/flowchart.js"></script>
+<script src="/mylon.github.io/assets/js/raphael-min.js"><
+<script src="/mylon.github.io/assets/js/flowchart.js"></script>
 
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
