--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -88,7 +88,7 @@
 
     @include breakpoint($large) {
       #padding: 5px;
-      border: 5px solid border-color: green; #$border-color;
+      border: 5px solid; border-color: green; #$border-color;
     }
   }
 }
