--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -39,7 +39,7 @@ $type-size-3                : 1.563em;  // ~25.008px
 $type-size-4                : 1.25em;   // ~20px
 $type-size-5                : 1em;      // ~16px
 $type-size-6                : 0.75em;   // ~12px
-$type-size-7                : 0.6875em; // ~11px
+$type-size-7                : 0.9875em; // ~11px
 $type-size-8                : 0.625em;  // ~10px
 
 
@@ -58,7 +58,7 @@ $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$border-color               : $#30e67f;
 
 $primary-color              : #7a8288;
 $success-color              : #62c462;
