--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,3 +1,6 @@
+{% include date-german.html date=post.date %}
+Veröffentlichungsdatum: {{ formattedDate }}
+
 {% include base_path %}
 
 {% if post.header.teaser %}
