--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+{% include date-german.html date=post.date %}
+Veröffentlichungsdatum: {{ formattedDate }}
 
 {% include base_path %}
 
