--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,5 +1,5 @@
 {% include date-german.html date=post.date %}
-Veröffentlichungsdatum: {{ formattedDate }}
+
 
 {% include base_path %}
 
@@ -44,7 +44,7 @@ Veröffentlichungsdatum: {{ formattedDate }}
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
-          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <p>Published in <i>{{ post.venue }}</i>, Veröffentlichungsdatum: {{ formattedDate }}, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
