--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -27,6 +27,7 @@
 
 <script src="/mylon.github.io/assets/js/raphael-min.js"><
 <script src="/mylon.github.io/assets/js/flowchart.js"></script>
+<script src="/mylon.github.io/assets/js/analytics.js"></script>
 
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
