--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
 
-<script src="/mylon.github.io/assets/js/raphael-min.js"><
+<script src="/mylon.github.io/assets/js/raphael-min.js"></script>
 <script src="/mylon.github.io/assets/js/flowchart.js"></script>
 <script src="/mylon.github.io/assets/js/analytics.js"></script>
 
