--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -28,6 +28,9 @@
 <script src="/mylon.github.io/assets/js/raphael-min.js"></script>
 <script src="/mylon.github.io/assets/js/flowchart.js"></script>
 <script src="/mylon.github.io/assets/js/analytics.js"></script>
+<script src="/mylon.github.io/assets/js/popup.js"></script>
+<script src="/mylon.github.io/assets/js/jquery.js"></script>
+
 
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
