--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -27,7 +27,7 @@
 
 <script src="/mylon.github.io/assets/js/raphael-min.js"></script>
 <script src="/mylon.github.io/assets/js/flowchart.js"></script>
-<script src="/mylon.github.io/assets/js/analytics.js"></script>
+<script src="/mylon.github.io/assets/js/analytics2.js"></script>
 <script src="/mylon.github.io/assets/js/popup.js"></script>
 <script src="/mylon.github.io/assets/js/jquery.js"></script>
 
